<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="disabled">Disabled</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Discard</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose application</string>
    <string name="navigation_settings_title">Navigation</string>
    <string name="interface_settings_title">Interface</string>
    <string name="advanced_settings">Advanced</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="status_bar_icons">Status bar icons</string>
    <string name="navigation_settings_options_title">Navigation options</string>
    <string name="app_ops_categories_location">Location</string>
    <string name="app_ops_categories_personal">Personal</string>
    <string name="app_ops_categories_messaging">Messaging</string>
    <string name="app_ops_categories_media">Media</string>
    <string name="app_ops_categories_device">Device</string>
    <string name="app_ops_categories_bootup">Bootup</string>
    <string name="app_ops_categories_su">Superuser</string>
    <string name="app_ops_summaries_coarse_location">coarse location</string>
    <string name="app_ops_summaries_fine_location">fine location</string>
    <string name="app_ops_summaries_gps">GPS</string>
    <string name="app_ops_summaries_vibrate">vibrate</string>
    <string name="app_ops_summaries_read_contacts">read contacts</string>
    <string name="app_ops_summaries_modify_contacts">modify contacts</string>
    <string name="app_ops_summaries_read_call_log">read call log</string>
    <string name="app_ops_summaries_modify_call_log">modify call log</string>
    <string name="app_ops_summaries_read_calendar">read calendar</string>
    <string name="app_ops_summaries_modify_calendar">modify calendar</string>
    <string name="app_ops_summaries_wifi_scan">Wi-Fi scan</string>
    <string name="app_ops_summaries_notification">notification/toast</string>
    <string name="app_ops_summaries_cell_scan">cell scan</string>
    <string name="app_ops_summaries_call_phone">call phone</string>
    <string name="app_ops_summaries_read_sms">read SMS</string>
    <string name="app_ops_summaries_write_sms">write SMS</string>
    <string name="app_ops_summaries_receive_sms">receive SMS</string>
    <string name="app_ops_summaries_receive_emergency_sms">receive emergency SMS</string>
    <string name="app_ops_summaries_receive_mms">receive MMS</string>
    <string name="app_ops_summaries_receive_wap_push">receive WAP push</string>
    <string name="app_ops_summaries_send_sms">send SMS</string>
    <string name="app_ops_summaries_read_icc_sms">read ICC SMS</string>
    <string name="app_ops_summaries_write_icc_sms">write ICC SMS</string>
    <string name="app_ops_summaries_modify_settings">modify settings</string>
    <string name="app_ops_summaries_draw_on_top">draw on top</string>
    <string name="app_ops_summaries_access_notifications">access notifications</string>
    <string name="app_ops_summaries_camera">camera</string>
    <string name="app_ops_summaries_record_audio">record audio</string>
    <string name="app_ops_summaries_play_audio">play audio</string>
    <string name="app_ops_summaries_read_clipboard">read clipboard</string>
    <string name="app_ops_summaries_modify_clipboard">modify clipboard</string>
    <string name="app_ops_summaries_media_buttons">media buttons</string>
    <string name="app_ops_summaries_audio_focus">audio focus</string>
    <string name="app_ops_summaries_master_volume">master volume</string>
    <string name="app_ops_summaries_voice_volume">voice volume</string>
    <string name="app_ops_summaries_ring_volume">ring volume</string>
    <string name="app_ops_summaries_media_volume">media volume</string>
    <string name="app_ops_summaries_alarm_volume">alarm volume</string>
    <string name="app_ops_summaries_notification_volume">notification volume</string>
    <string name="app_ops_summaries_bluetooth_volume">bluetooth volume</string>
    <string name="app_ops_summaries_keep_awake">keep awake</string>
    <string name="app_ops_summaries_monitor_location">monitor location</string>
    <string name="app_ops_summaries_monitor_high_power_location">monitor high power location</string>
    <string name="app_ops_summaries_get_usage_stats">get usage stats</string>
    <string name="app_ops_summaries_mute_unmute_microphone">mute/unmute microphone</string>
    <string name="app_ops_summaries_toast_window">display toasts</string>
    <string name="app_ops_summaries_project_media">project media</string>
    <string name="app_ops_summaries_activate_vpn">activate VPN</string>
    <string name="app_ops_summaries_write_wallpaper">write wallpaper</string>
    <string name="app_ops_summaries_assist_structure">assist structure</string>
    <string name="app_ops_summaries_assist_screenshot">assist screenshot</string>
    <string name="app_ops_summaries_read_phone_state">read phone state</string>
    <string name="app_ops_summaries_add_voicemail">add voicemail</string>
    <string name="app_ops_summaries_use_sip">use SIP</string>
    <string name="app_ops_summaries_make_call">make call</string>
    <string name="app_ops_summaries_use_fingerprint">use fingerprint</string>
    <string name="app_ops_summaries_use_body_sensors">use body sensors</string>
    <string name="app_ops_summaries_read_cell_broadcasts">read cell broadcasts</string>
    <string name="app_ops_summaries_mock_location">mock location</string>
    <string name="app_ops_summaries_read_external_storage">read external storage</string>
    <string name="app_ops_summaries_write_external_storage">write to external storage</string>
    <string name="app_ops_summaries_turn_screen_on">turn screen on</string>
    <string name="app_ops_summaries_get_accounts">get accounts</string>
    <string name="app_ops_summaries_toggle_wifi">toggle Wi-Fi</string>
    <string name="app_ops_summaries_toggle_bluetooth">toggle bluetooth</string>
    <string name="app_ops_summaries_start_at_boot">start at boot</string>
    <string name="app_ops_summaries_toggle_nfc">toggle NFC</string>
    <string name="app_ops_summaries_toggle_mobile_data">toggle mobile data</string>
    <string name="app_ops_summaries_superuser">root access</string>
    <string name="app_ops_labels_coarse_location">Coarse location</string>
    <string name="app_ops_labels_fine_location">Fine location</string>
    <string name="app_ops_labels_gps">GPS</string>
    <string name="app_ops_labels_vibrate">Vibrate</string>
    <string name="app_ops_labels_read_contacts">Read contacts</string>
    <string name="app_ops_labels_modify_contacts">Modify contacts</string>
    <string name="app_ops_labels_read_call_log">Read call log</string>
    <string name="app_ops_labels_modify_call_log">Modify call log</string>
    <string name="app_ops_labels_read_calendar">Read calendar</string>
    <string name="app_ops_labels_modify_calendar">Modify calendar</string>
    <string name="app_ops_labels_wifi_scan">Wi-Fi scan</string>
    <string name="app_ops_labels_notification">Notification/Toast</string>
    <string name="app_ops_labels_cell_scan">Cell scan</string>
    <string name="app_ops_labels_call_phone">Call phone</string>
    <string name="app_ops_labels_read_sms">Read SMS</string>
    <string name="app_ops_labels_write_sms">Write SMS</string>
    <string name="app_ops_labels_receive_sms">Receive SMS</string>
    <string name="app_ops_labels_receive_emergency_sms">Receive emergency SMS</string>
    <string name="app_ops_labels_receive_mms">Receive MMS</string>
    <string name="app_ops_labels_receive_wap_push">Receive WAP push</string>
    <string name="app_ops_labels_send_sms">Send SMS</string>
    <string name="app_ops_labels_read_icc_sms">Read ICC SMS</string>
    <string name="app_ops_labels_write_icc_sms">Write ICC SMS</string>
    <string name="app_ops_labels_modify_settings">Modify settings</string>
    <string name="app_ops_labels_draw_on_top">Draw on top</string>
    <string name="app_ops_labels_access_notifications">Access notifications</string>
    <string name="app_ops_labels_camera">Camera</string>
    <string name="app_ops_labels_record_audio">Record audio</string>
    <string name="app_ops_labels_play_audio">Play audio</string>
    <string name="app_ops_labels_read_clipboard">Read clipboard</string>
    <string name="app_ops_labels_modify_clipboard">Modify clipboard</string>
    <string name="app_ops_labels_media_buttons">Media buttons</string>
    <string name="app_ops_labels_audio_focus">Audio focus</string>
    <string name="app_ops_labels_master_volume">Master volume</string>
    <string name="app_ops_labels_voice_volume">Voice volume</string>
    <string name="app_ops_labels_ring_volume">Ring volume</string>
    <string name="app_ops_labels_media_volume">Media volume</string>
    <string name="app_ops_labels_alarm_volume">Alarm volume</string>
    <string name="app_ops_labels_notification_volume">Notification volume</string>
    <string name="app_ops_labels_bluetooth_volume">Bluetooth volume</string>
    <string name="app_ops_labels_keep_awake">Keep awake</string>
    <string name="app_ops_labels_monitor_location">Monitor location</string>
    <string name="app_ops_labels_monitor_high_power_location">Monitor high power location</string>
    <string name="app_ops_labels_get_usage_stats">Get usage stats</string>
    <string name="app_ops_labels_mute_unmute_microphone">Mute/unmute microphone</string>
    <string name="app_ops_labels_toast_window">Display toasts</string>
    <string name="app_ops_labels_project_media">Project media</string>
    <string name="app_ops_labels_activate_vpn">Activate VPN</string>
    <string name="app_ops_labels_write_wallpaper">Write wallpaper</string>
    <string name="app_ops_labels_assist_structure">Assist structure</string>
    <string name="app_ops_labels_assist_screenshot">Assist screenshot</string>
    <string name="app_ops_labels_read_phone_state">Read phone state</string>
    <string name="app_ops_labels_add_voicemail">Add voicemail</string>
    <string name="app_ops_labels_use_sip">Use SIP</string>
    <string name="app_ops_labels_make_call">Make call</string>
    <string name="app_ops_labels_use_fingerprint">Use fingerprint</string>
    <string name="app_ops_labels_use_body_sensors">Use body sensors</string>
    <string name="app_ops_labels_read_cell_broadcasts">Read cell broadcasts</string>
    <string name="app_ops_labels_mock_location">Mock location</string>
    <string name="app_ops_labels_read_external_storage">Read external storage</string>
    <string name="app_ops_labels_write_external_storage">Write to external storage</string>
    <string name="app_ops_labels_turn_screen_on">Turn screen on</string>
    <string name="app_ops_labels_get_accounts">Get accounts</string>
    <string name="app_ops_labels_change_wifi">Toggle Wi-Fi</string>
    <string name="app_ops_labels_toggle_bluetooth">Toggle bluetooth</string>
    <string name="app_ops_labels_start_at_boot">Start at boot</string>
    <string name="app_ops_labels_toggle_nfc">Toggle NFC</string>
    <string name="app_ops_labels_toggle_mobile_data">Toggle mobile data</string>
    <string name="app_ops_labels_superuser">Root access</string>
    <string name="navbar_enable_bar">Enable navigation bar</string>
    <string name="navbar_enable_bar_summary">Enable the navigation bar</string>
    <string name="navbar_can_move">Show landscape</string>
    <string name="navbar_can_move_summary">Shows navigation bar in landscape on the bottom</string>
    <string name="navbar_style_dimen_title">Dimensions</string>
    <string name="navbar_style_dimen_summary">Change navigation bar height</string>
    <string name="navbar_cat">Navigation bar</string>
    <string name="nav_bar_button_style">Button style</string>
    <string name="nav_bar_button_style_summary">Change navigation bar button style</string>
</resources>