<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2016 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

        <SwitchPreference
                android:key="enable_nav_bar"
                android:title="@string/navbar_enable_bar"
                android:summary="@string/navbar_enable_bar_summary" />

        <PreferenceCategory
                android:key="navbar_cat"
                android:title="@string/navbar_cat" >

           <Preference
               android:key="navbar_editor"
               android:title="NavigationBarEditor" />

            <PreferenceScreen
                android:fragment="com.android.settings.slim.NavBarButtonStyle"
                android:key="nav_bar_button_style"
                android:title="@string/nav_bar_button_style"
                android:summary="@string/nav_bar_button_style_summary" />

            <PreferenceScreen
                android:key="navbar_style_dimen_settings"
                android:fragment="com.android.settings.slim.NavbarStyleDimenSettings"
                android:title="@string/navbar_style_dimen_title"
                android:summary="@string/navbar_style_dimen_summary" />

        </PreferenceCategory>

        <PreferenceCategory
                android:key="advanced_cat"
                android:title="@string/advanced_settings">

            <SwitchPreference
                    android:key="navbar_can_move"
                    android:title="@string/navbar_can_move"
                    android:summary="@string/navbar_can_move_summary" />

        </PreferenceCategory>

</PreferenceScreen>
